--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "scripts": {
     "start": "webpack-dev-server --mode development --open",
     "dev": "webpack --mode development",
-    "build": "webpack --mode production"
+    "build": "webpack --mode production",
+    "deploy": "gh-pages -d dist"
   },
   "browserslist": [
     "> 1%",
@@ -34,6 +35,7 @@
     "babel-loader": "^8.0.4",
     "bootstrap": "^4.1.3",
     "css-loader": "^1.0.1",
+    "gh-pages": "^3.2.3",
     "html-webpack-plugin": "^3.2.0",
     "mini-css-extract-plugin": "^0.4.4",
     "node-sass": "4.14",
